Expose images to accessibility

Blink has some loose heuristics to ignore images, even ones that are important for interaction.

Specifically, web authors do use horizontal images (i.e. 1d images) to convey information to screen readers that is not purely presentational.

At the very least, it should be up to each client to make an intelligent determination.

This cl also adds missing graphics predicates and key bindings to ChromeVox.

BUG=641848
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2479593007
Cr-Commit-Position: refs/heads/master@{#430199}

Former-commit-id: 32e424c9defb30fdf056cc48f1c90451f8c6c2a9